Fix spacing between group title and description in search page

--- a/client/src/styles/searchpage.css
+++ b/client/src/styles/searchpage.css
@@ -24,6 +24,7 @@
   justify-content: space-between;
   font-size: 16px;
   margin-bottom: 0px;
+  padding-bottom: 0px;
 }
 
 .list-group-modifier {
